Add optional handling